log
Fri 21 Apr 2023 06:49:58 PM UTC: 
 treemap.c | 25 ++++++++++---------------
 1 file changed, 10 insertions(+), 15 deletions(-)
 tests:  1|8
total_score: 0/70
e9310fe
Fri 21 Apr 2023 07:37:10 PM UTC: 
 treemap.c | 8 +++++---
 1 file changed, 5 insertions(+), 3 deletions(-)
 tests:  1|8
total_score: 0/70
b2c0fac
Fri 21 Apr 2023 07:38:49 PM UTC: 
 treemap.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  3|8
total_score: 0/70
f11a6c3
Fri 21 Apr 2023 07:39:07 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|8
total_score: 0/70
aaa7dde
Fri 21 Apr 2023 07:41:39 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘createTreeMap’:
treemap.c:42:3: error: ‘new’ undeclared (first use in this function)
   42 |   new->lower_than = lower_than;
      |   ^~~
treemap.c:42:3: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
ac3feb0
Fri 21 Apr 2023 07:41:51 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|7
total_score: 5/70
bb21d3a
Fri 21 Apr 2023 10:45:37 PM UTC: 
 treemap.c | 10 +++++-----
 1 file changed, 5 insertions(+), 5 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:52:14: error: unused variable ‘aux’ [-Werror=unused-variable]
   52 |    TreeNode* aux = tree->root;
      |              ^~~
cc1: all warnings being treated as errors
Compilation failed
a4373f7
Fri 21 Apr 2023 10:50:33 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:52:13: error: unused variable ‘nuevoNode’ [-Werror=unused-variable]
   52 |   TreeNode* nuevoNode = createTreeNode(key, value);
      |             ^~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
43b689e
Fri 21 Apr 2023 10:51:20 PM UTC: 
 treemap.c | 6 ++++++
 1 file changed, 6 insertions(+)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:55:18: error: ‘nuevoNodo’ undeclared (first use in this function); did you mean ‘nuevoNode’?
   55 |     tree->root = nuevoNodo;
      |                  ^~~~~~~~~
      |                  nuevoNode
treemap.c:55:18: note: each undeclared identifier is reported only once for each function it appears in
treemap.c:52:13: error: unused variable ‘nuevoNode’ [-Werror=unused-variable]
   52 |   TreeNode* nuevoNode = createTreeNode(key, value);
      |             ^~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
825d170
Fri 21 Apr 2023 10:51:39 PM UTC: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  4|7
total_score: 5/70
c77c736
Fri 21 Apr 2023 11:13:26 PM UTC: 
 treemap.c | 3 +++
 1 file changed, 3 insertions(+)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:61:13: error: unused variable ‘parent’ [-Werror=unused-variable]
   61 |   TreeNode* parent = NULL;
      |             ^~~~~~
treemap.c:60:13: error: unused variable ‘current’ [-Werror=unused-variable]
   60 |   TreeNode* current = tree->root;
      |             ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
a87ca15
Fri 21 Apr 2023 11:13:51 PM UTC: 
 treemap.c | 4 ++++
 1 file changed, 4 insertions(+)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:61:13: error: unused variable ‘parent’ [-Werror=unused-variable]
   61 |   TreeNode* parent = NULL;
      |             ^~~~~~
cc1: all warnings being treated as errors
Compilation failed
bcd68d5
Fri 21 Apr 2023 11:14:07 PM UTC: 
 treemap.c | 4 ++++
 1 file changed, 4 insertions(+)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:61:13: error: unused variable ‘parent’ [-Werror=unused-variable]
   61 |   TreeNode* parent = NULL;
      |             ^~~~~~
cc1: all warnings being treated as errors
Compilation failed
075120a
Fri 21 Apr 2023 11:14:39 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:61:13: error: variable ‘parent’ set but not used [-Werror=unused-but-set-variable]
   61 |   TreeNode* parent = NULL;
      |             ^~~~~~
cc1: all warnings being treated as errors
Compilation failed
5afb7a7
Fri 21 Apr 2023 11:19:35 PM UTC: 
 treemap.c | 6 ++++++
 1 file changed, 6 insertions(+)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:61:13: error: variable ‘parent’ set but not used [-Werror=unused-but-set-variable]
   61 |   TreeNode* parent = NULL;
      |             ^~~~~~
cc1: all warnings being treated as errors
Compilation failed
be10780
Fri 21 Apr 2023 11:23:51 PM UTC: 
 treemap.c | 7 +++++++
 1 file changed, 7 insertions(+)
 tests:  6|6
total_score: 15/70
290aeea
Fri 21 Apr 2023 11:25:10 PM UTC: 
 treemap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  6|6
total_score: 15/70
59819d7
Fri 21 Apr 2023 11:47:52 PM UTC: 
 treemap.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  8|5
total_score: 15/70
91087ae
Fri 21 Apr 2023 11:48:51 PM UTC: 
 treemap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  8|5
total_score: 15/70
644acd7
Fri 21 Apr 2023 11:49:24 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  10|4
total_score: 20/70
37aee50
Fri 21 Apr 2023 11:51:24 PM UTC: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:47:13: error: unused variable ‘auxiliar’ [-Werror=unused-variable]
   47 |   TreeNode* auxiliar = tree->root;
      |             ^~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
0b6029f
Fri 21 Apr 2023 11:53:28 PM UTC: 
 treemap.c | 8 ++++++++
 1 file changed, 8 insertions(+)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:49:10: error: ‘aux’ undeclared (first use in this function)
   49 |   while (aux != NULL){
      |          ^~~
treemap.c:49:10: note: each undeclared identifier is reported only once for each function it appears in
treemap.c:47:13: error: unused variable ‘auxiliar’ [-Werror=unused-variable]
   47 |   TreeNode* auxiliar = tree->root;
      |             ^~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
f9f6d56
Fri 21 Apr 2023 11:53:38 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:49:10: error: ‘aux’ undeclared (first use in this function)
   49 |   while (aux != NULL){
      |          ^~~
treemap.c:49:10: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
ff7b3a5
Fri 21 Apr 2023 11:53:46 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:50:30: error: ‘aux’ undeclared (first use in this function)
   50 |      if (is_equal(tree, key, aux->pair->key) == 1) {
      |                              ^~~
treemap.c:50:30: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
ea44e82
Sat 22 Apr 2023 12:03:10 AM UTC: 
 treemap.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
 tests:  17|3
total_score: 30/70
f1bb01d
